--- a/src/app/navigation/sidenav/sidenav-item/sidenav-item.component.html
+++ b/src/app/navigation/sidenav/sidenav-item/sidenav-item.component.html
@@ -1,22 +1,22 @@
 <a md-list-item [class.icon--solo]="!full" *ngIf="!hasLink && !hasChildren && !hasQuery"(click)="clicked($event)">
   <md-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
-  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title }}</span>
+  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title | translate }}</span>
 </a>
 <a md-list-item [class.icon--solo]="!full" *ngIf="hasLink && !hasChildren && !hasQuery" routerLinkActive="active" (toggle)="true" (click)="clicked($event)">
   <md-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
-  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title }}</span>
+  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title | translate}}</span>
 </a>
 <a md-list-item [class.icon--solo]="!full" *ngIf="hasLink && !hasChildren && hasQuery" routerLinkActive="active" (toggle)="true">
   <md-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
-  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title }}</span>
+  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title | translate}}</span>
 </a>
 <a md-list-item [class.icon--solo]="!full" *ngIf="hasClickHandler" routerLinkActive="active" (toggle)="true" (click)="menuItem.clickHandler()">
   <md-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
-  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title }}</span>
+  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title | translate}}</span>
 </a>
 <a md-list-item [class.icon--solo]="!full" class="nav-dropdown" *ngIf="hasChildren" (click)="toggleDropdown(!active)" [ngClass]="{ 'active' : active && full }" (click)="clicked($event)">
   <md-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
-  <span class="sidenav-item__text" *ngIf="full">{{ menuItem?.title }}</span>
+  <span class="sidenav-item__text" *ngIf="full">{{ menuItem?.title | translate}}</span>
   <span class="app-flex-filler"></span>
   <md-icon class="icon--more" [class.icon--more--rotate]="active" *ngIf="full">keyboard_arrow_down</md-icon>
 </a>
