--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-schema/state-machine-schema.component.html
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-schema/state-machine-schema.component.html
@@ -1,8 +1,8 @@
 <div class="entity-view__card">
   <div class="entity-view__card__header">
     <div>
-      <div class="entity-view__card__header__title">State Machine Flow</div>
-      <div class="entity-view__card__header__subtitle">Below is rough flow of all data in SIX, click an element to load details below</div>
+      <div class="entity-view__card__header__title">{{'ORDERENGINE_SCHEMA_TITLE' | translate}}</div>
+      <div class="entity-view__card__header__subtitle">{{'ORDERENGINE_SCHEMA_SUBTITLE' | translate}}</div>
     </div>
   </div>
 
