--- a/src/app/pages/accounts-page/bill-index/bills.component.html
+++ b/src/app/pages/accounts-page/bill-index/bills.component.html
@@ -1,26 +1,26 @@
 <div [style.display]="addMode ? 'none' : 'block'" class="bills">
   <div class="bills__actions">
-    <div class="bills__actions__title">ACCOUNT ACTIONS</div>
-    <md-checkbox><span>Enable Automatic Payments</span></md-checkbox>
+    <div class="bills__actions__title">{{ 'ACCOUNT_BILLING_ACTIONS' | translate}}</div>
+    <md-checkbox><span>{{ 'ACCOUNT_BILLING_AUTO' | translate}}</span></md-checkbox>
     <div class="bills__actions__buttons">
-      <div>CANCEL ACCOUNT</div>
-      <div>PAY BILL</div>
+      <div>{{ 'ACCOUNT_BILLING_ACTIONCANCEL' | translate}}</div>
+      <div>{{ 'ACCOUNT_BILLING_ACTIONPAY' | translate}}</div>
     </div>
   </div>
 
   <div>
-    <div class="title">Current Invoice</div>
+    <div class="title">{{ 'ACCOUNT_BILLING_CURRENT' | translate}}</div>
 
     <invoice *ngFor="let unpaidBill of unpaid" [bill]="unpaidBill" (update)="updateInvoice($event)"></invoice>
   </div>
 
   <div>
-    <div class="title">Past Invoices</div>
+    <div class="title">{{ 'ACCOUNT_BILLING_PAST' | translate}}</div>
 
     <invoice *ngFor="let paidBill of paid" [bill]="paidBill" (update)="updateInvoice($event)"></invoice>
   </div>
 
-  <div class="bills__new" (click)="createNewInvoice()" *ngIf="authService.isActiveAclMasterAccount()">CREATE INVOICE</div>
+  <div class="bills__new" (click)="createNewInvoice()" *ngIf="authService.isActiveAclMasterAccount()">{{ 'ACCOUNT_BILLING_CREATE' | translate}}</div>
 </div>
 
 <add-update-invoice [style.display]="addMode ? 'block' : 'none'" [bill]="billToUpdate" (cancel)="addMode = false;"></add-update-invoice>
